﻿$Revision$
	$Author$ $Date$
	1. Сливаем с бранчем ctapmex_no_recursion
	избавляемся от рекурсии в CRegExp::lowParse

#Revision: 1683
	#Author: ctapmex Date: 2011-03-16 15:07:35 +0500 (Ср, 16 мар 2011)
	1. небольшая утечка

#Revision: 1676
	#Author: ctapmex Date: 2011-03-13 22:24:53 +0500 (Вс, 13 мар 2011)
	1. оптимизация String::indexOf

#Revision: 1666
	#Author: ctapmex Date: 2011-03-06 21:56:30 +0500 (Вс, 06 мар 2011)
	1. с 3 попытки 1549 закрываем -)

#Revision: 1656
	#Author: ctapmex Date: 2011-02-24 00:02:43 +0500 (Чт, 24 фев 2011)
	1. откат 1631 до лучших времен. плохо тестировал, падает при редактировании текста

#Revision: 1631
	#Author: ctapmex Date: 2011-01-06 00:03:52 +0500 (Чт, 06 янв 2011)
	1. 1549 довел до ума. не течет, удаляется быстро.

#Revision: 1626
	#Author: ctapmex Date: 2010-11-20 22:27:17 +0500 (Сб, 20 ноя 2010)
	1. падение при ошибке открытия файла стиля

#Revision: 1625
	#Author: ctapmex Date: 2010-11-20 20:12:46 +0500 (Сб, 20 ноя 2010)
	1. утечки памяти и обращение к непроинициализированным переменным
	2. 1549 вернул обратно, т.к. все таки течет.

#Revision: 1619
	#Author: ctapmex Date: 2010-11-13 16:53:18 +0500 (Сб, 13 ноя 2010)
	1. при загрузке hrd стилей в случае совпадения имен, новый стиль не грузим. 

#Revision: 1616
	#Author: ctapmex Date: 2010-11-08 20:38:40 +0500 (Пн, 08 ноя 2010)
	1. функция getFileTypesCount

#Revision: 1615
	#Author: ctapmex Date: 2010-11-08 11:16:06 +0500 (Пн, 08 ноя 2010)
	1. переименован функция getParamValueCount в getParamNotDefaultValueCount для 
	отражения точного её значения

#Revision: 1613
	#Author: ctapmex Date: 2010-11-08 10:08:36 +0500 (Пн, 08 ноя 2010)
	1. добавлены функции и процедуры в FileTypeImpl

#Revision: 1609
	#Author: ctapmex Date: 2010-11-02 13:41:44 +0500 (Вт, 02 ноя 2010)
	1. gcc warnings

#Revision: 1606
	#Author: ctapmex Date: 2010-11-01 17:11:28 +0500 (Пн, 01 ноя 2010)
	1. функция ParserFactory::countHRD для получения количества загруженных схем 

#Revision: 1603 $