@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. у нас экземпларов CRegExp много, а стек для "рекурсии" должен быть один. 
+	в итоге скорость работы практически не отличается от ревизии 1683
+
+#Revision: 1684
+	#Author: ctapmex Date: 2011-03-17 17:21:58 +0500 (Чт, 17 мар 2011)
 	1. Сливаем с бранчем ctapmex_no_recursion
 	избавляемся от рекурсии в CRegExp::lowParse
 
